--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
     "private": true,
     "scripts": {
-        "build": "rollup --config rollup.config.js"
+        "build": "rollup --config rollup.config.js",
+        "lint": "eslint . --ext .ts"
     },
     "devDependencies": {
         "@babel/core": "^7.10.5",
         "@babel/preset-env": "^7.10.4",
         "@rollup/plugin-babel": "^5.1.0",
         "@rollup/plugin-typescript": "^5.0.2",
+        "@typescript-eslint/eslint-plugin": "^3.6.1",
+        "@typescript-eslint/parser": "^3.6.1",
+        "eslint": "^7.4.0",
         "rollup": "^2.21.0",
         "rollup-plugin-copy": "^3.3.0",
         "rollup-plugin-delete": "^2.0.0",
