:sparkles: now linting javascript files as well as typescript ones

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "build": "rollup --config rollup.config.js",
-        "lint": "eslint . --ext .ts"
+        "lint": "eslint . --ext .ts,.js"
     },
     "devDependencies": {
         "@babel/core": "^7.10.5",
