--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "scripts": {
         "build": "rollup --config rollup.config.js",
-        "lint": "eslint . --ext .ts,.js"
+        "lint": "eslint . --ext .ts,.js,.json"
     },
     "devDependencies": {
         "@babel/core": "^7.10.5",
@@ -12,6 +12,7 @@
         "@typescript-eslint/eslint-plugin": "^3.6.1",
         "@typescript-eslint/parser": "^3.6.1",
         "eslint": "^7.4.0",
+        "eslint-plugin-json": "^2.1.1",
         "rollup": "^2.21.0",
         "rollup-plugin-copy": "^3.3.0",
         "rollup-plugin-delete": "^2.0.0",
