--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@typescript-eslint/eslint-plugin": "^3.6.1",
         "@typescript-eslint/parser": "^3.6.1",
         "eslint": "^7.4.0",
+        "eslint-plugin-jest": "^23.18.0",
         "eslint-plugin-json": "^2.1.1",
         "jest": "^26.1.0",
         "rollup": "^2.21.0",
