--- a/package.json
+++ b/package.json
@@ -1,28 +1,56 @@
 {
-    "private": true,
-    "scripts": {
-        "build": "rollup --config rollup.config.js",
-        "lint": "eslint . --ext .ts,.js,.json",
-        "test": "jest"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.10.5",
-        "@babel/preset-env": "^7.10.4",
-        "@rollup/plugin-babel": "^5.1.0",
-        "@rollup/plugin-typescript": "^5.0.2",
-        "@types/jest": "^26.0.4",
-        "@typescript-eslint/eslint-plugin": "^3.6.1",
-        "@typescript-eslint/parser": "^3.6.1",
-        "eslint": "^7.4.0",
-        "eslint-plugin-jest": "^23.18.0",
-        "eslint-plugin-json": "^2.1.1",
-        "jest": "^26.1.0",
-        "rollup": "^2.21.0",
-        "rollup-plugin-copy": "^3.3.0",
-        "rollup-plugin-delete": "^2.0.0",
-        "rollup-plugin-terser": "^6.1.0",
-        "ts-jest": "^26.1.2",
-        "tslib": "^2.0.0",
-        "typescript": "^3.9.6"
-    }
+  "author": {
+    "name": "Amin NAIRI",
+    "url": "https://github.com/aminnairi"
+  },
+  "browser": "build/scripts/twitch-coin.js",
+  "bugs": {
+    "url": "https://github.com/aminnairi/twitch-coin/issues"
+  },
+  "description": "Automatically gather your Twitch Coin while watching your favorite streamer.",
+  "files": [
+    "build"
+  ],
+  "homepage": "https://github.com/aminnairi/twitch-coin#readme",
+  "keywords": [
+    "twitch",
+    "coin",
+    "money",
+    "reward",
+    "currency"
+  ],
+  "license": "GPL-3.0-or-later",
+  "name": "@aminnairi/twitch-coin",
+  "repository": {
+    "directory": ".",
+    "type": "git",
+    "url": "https://github.com/aminnairi/twitch-coin.git"
+  },
+  "version": "0.1.1",
+  "private": true,
+  "scripts": {
+    "build": "rollup --config rollup.config.js",
+    "lint": "eslint . --ext .ts,.js,.json",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@rollup/plugin-babel": "^5.1.0",
+    "@rollup/plugin-typescript": "^5.0.2",
+    "@types/jest": "^26.0.4",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.4.0",
+    "eslint-plugin-jest": "^23.18.0",
+    "eslint-plugin-json": "^2.1.1",
+    "jest": "^26.1.0",
+    "rollup": "^2.21.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-terser": "^6.1.0",
+    "ts-jest": "^26.1.2",
+    "tslib": "^2.0.0",
+    "typescript": "^3.9.6"
+  }
 }
